--- a/packages/plugins/auth/package.json
+++ b/packages/plugins/auth/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup",
-    "dev": "chokidar 'src/**/*' -c 'bun run build'"
+    "dev": "bun run build && chokidar 'src/**/*' -c 'bun run build'"
   },
   "dependencies": {
     "pocketpages-plugin-js-sdk": "workspace:^0.1.0"
