chore: fix workspace deps

--- a/packages/plugins/ejs/package.json
+++ b/packages/plugins/ejs/package.json
@@ -14,7 +14,7 @@
     "pocketbase-stringify": "^0.0.2"
   },
   "devDependencies": {
-    "pocketpages": "workspace:^0.16.0",
+    "pocketpages": "workspace:>=0.16.0",
     "@s-libs/micro-dash": "^18.0.0",
     "chokidar-cli": "^3.0.0",
     "tsup": "^8.3.6",
