--- a/packages/plugins/auth/package.json
+++ b/packages/plugins/auth/package.json
@@ -9,7 +9,7 @@
     "dev": "chokidar 'src/**/*' -c 'bun run build'"
   },
   "dependencies": {
-    "pocketpages-plugin-js-sdk": "workspace:^0.1.0"
+    "pocketpages-plugin-js-sdk": "workspace:>=0.1.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.12",
