--- a/packages/plugins/micro-dash/package.json
+++ b/packages/plugins/micro-dash/package.json
@@ -13,7 +13,7 @@
     "chokidar-cli": "^3.0.0",
     "tsup": "^8.3.6",
     "typescript": "^5.7.3",
-    "pocketpages": "workspace:^0.16.0"
+    "pocketpages": "workspace:>=0.16.0"
   },
   "files": [
     "dist",
