--- a/packages/starters/auth/package.json
+++ b/packages/starters/auth/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "0.0.2",
   "dependencies": {
-    "pocketpages": "workspace:^0.17.0",
-    "pocketpages-plugin-auth": "workspace:^0.2.0",
-    "pocketpages-plugin-js-sdk": "workspace:^0.1.0"
+    "pocketpages": "workspace:>=0.16.0",
+    "pocketpages-plugin-auth": "workspace:>=0.2.0",
+    "pocketpages-plugin-js-sdk": "workspace:>=0.1.0"
   },
   "files": [
     "pb_hooks",
