--- a/packages/starters/daisyui-docs/package.json
+++ b/packages/starters/daisyui-docs/package.json
@@ -27,8 +27,8 @@
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
-    "pocketpages": "workspace:^0.16.0",
-    "pocketpages-plugin-marked": "workspace:^0.1.0"
+    "pocketpages": "workspace:>=0.16.0",
+    "pocketpages-plugin-marked": "workspace:>=0.1.0"
   },
   "files": [
     "pb_hooks",
