--- a/packages/starters/htmx/package.json
+++ b/packages/starters/htmx/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.2",
   "private": true,
   "dependencies": {
-    "pocketpages": "workspace:^0.16.0",
-    "pocketpages-plugin-sse": "workspace:^0.1.0"
+    "pocketpages": "workspace:>=0.16.0",
+    "pocketpages-plugin-sse": "workspace:>=0.1.0"
   },
   "files": [
     "pb_hooks",
