--- a/packages/pocketpages/package.json
+++ b/packages/pocketpages/package.json
@@ -29,7 +29,7 @@
     "@s-libs/micro-dash": "^18.0.0",
     "cookie": "^1.0.2",
     "pocketbase-log": "^0.0.2",
-    "pocketpages-plugin-ejs": "workspace:^0.1.0",
+    "pocketpages-plugin-ejs": "workspace:>=0.1.0",
     "qs-lite": "^1.0.0",
     "url-parse": "^1.5.10"
   },
