--- a/packages/plugins/marked/package.json
+++ b/packages/plugins/marked/package.json
@@ -4,8 +4,8 @@
   "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup",
-    "dev": "bun run build && chokidar 'src/**/*' -c 'bun run build'"
+    "build": "tsdown",
+    "dev": "tsdown --watch"
   },
   "author": "",
   "license": "ISC",
@@ -23,7 +23,7 @@
     "@s-libs/micro-dash": "^18.0.0",
     "chokidar-cli": "^3.0.0",
     "pocketpages": "workspace:>=0.16.0",
-    "tsup": "^8.3.6",
+    "tsdown": "^0.12.7",
     "typescript": "^5.7.3"
   },
   "files": [
