--- a/packages/plugins/marked/package.json
+++ b/packages/plugins/marked/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pocketpages-plugin-marked",
   "version": "0.1.0",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsdown",
