--- a/packages/plugins/micro-dash/package.json
+++ b/packages/plugins/micro-dash/package.json
@@ -2,7 +2,7 @@
   "name": "pocketpages-plugin-micro-dash",
   "version": "0.1.0",
   "description": "",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsdown",
