--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -13,15 +13,18 @@
     "url": "https://github.com/benallfree/pocketpages/tree/main/packages/site"
   },
   "scripts": {
-    "dev": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css --watch"
+    "dev": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css --watch",
+    "build": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css",
+    "publish": "bun run build && phio deploy"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "daisyui": "^4.12.10",
-    "postcss-import": "^16.1.0",
-    "tailwindcss": "^3.4.11",
+    "phio": "^0.3.5",
     "pocketbase-jsvm": "^0.23.10002",
+    "postcss-import": "^16.1.0",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2"
   },
   "dependencies": {
