--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -18,13 +18,14 @@
     "publish": "bun run build && phio deploy"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "daisyui": "^4.12.10",
+    "@tailwindcss/cli": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
+    "daisyui": "^5.0.46",
     "phio": "^0.3.5",
     "pocketbase-jsvm": "^0.23.10002",
     "postcss-import": "^16.1.0",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.6.2"
   },
   "dependencies": {
