--- a/packages/plugins/auth/tsconfig.json
+++ b/packages/plugins/auth/tsconfig.json
@@ -1,8 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "types": ["pocketbase-jsvm"],
+    "strict": true,
+    "strictNullChecks": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitAny": true,
+    "target": "ES6",
     "module": "CommonJS",
-    "types": ["pocketbase-jsvm"]
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": ["src/**/*.ts"]
 }
