--- a/package.json
+++ b/package.json
@@ -9,31 +9,9 @@
     "typescript": "^5.7.3"
   },
   "scripts": {
-    "dev": "concurrently 'bun run dev:*'",
-    "dev:pocketpages": "cd packages/pocketpages && bun run dev",
-    "dev:plugins:auth": "cd packages/plugins/auth && bun run dev",
-    "dev:plugins:ejs": "cd packages/plugins/ejs && bun run dev",
-    "dev:plugins:js-sdk": "cd packages/plugins/js-sdk && bun run dev",
-    "dev:plugins:marked": "cd packages/plugins/marked && bun run dev",
-    "dev:plugins:micro-dash": "cd packages/plugins/micro-dash && bun run dev",
-    "dev:plugins:sse": "cd packages/plugins/sse && bun run dev",
-    "build": "concurrently 'bun run build:*'",
-    "build:pocketpages": "cd packages/pocketpages && bun run build",
-    "build:plugins:auth": "cd packages/plugins/auth && bun run build",
-    "build:plugins:ejs": "cd packages/plugins/ejs && bun run build",
-    "build:plugins:js-sdk": "cd packages/plugins/js-sdk && bun run build",
-    "build:plugins:marked": "cd packages/plugins/marked && bun run build",
-    "build:plugins:micro-dash": "cd packages/plugins/micro-dash && bun run build",
-    "build:plugins:sse": "cd packages/plugins/sse && bun run build",
-    "publish": "bun run build && concurrently 'bun run publish:*'",
-    "publish:pocketpages": "cd packages/pocketpages && bun publish",
-    "publish:create-pocketpages": "cd packages/create-pocketpages && bun publish",
-    "publish:plugins:auth": "cd packages/plugins/auth && bun publish",
-    "publish:plugins:ejs": "cd packages/plugins/ejs && bun publish",
-    "publish:plugins:js-sdk": "cd packages/plugins/js-sdk && bun publish",
-    "publish:plugins:marked": "cd packages/plugins/marked && bun publish",
-    "publish:plugins:micro-dash": "cd packages/plugins/micro-dash && bun publish",
-    "publish:plugins:sse": "cd packages/plugins/sse && bun publish"
+    "dev": "bun run --filter='*' dev",
+    "build": "bun run --filter='*' build",
+    "publish": "bun run build && bun run --filter='*' publish"
   },
   "prettier": {
     "singleQuote": true,
