--- a/packages/plugins/realtime/package.json
+++ b/packages/plugins/realtime/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pocketpages-plugin-sse",
-  "version": "0.1.0",
-  "description": "SSE plugin for PocketPages",
+  "name": "pocketpages-plugin-realtime",
+  "version": "0.0.1",
+  "description": "Realtime plugin for PocketPages",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
