--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css --watch",
     "build": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css",
-    "publish": "bun run build && phio deploy"
+    "deploy": "phio deploy"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.11",
