chore(create-pocketpages): move starters and custom instructions to json

--- a/packages/create-pocketpages/package.json
+++ b/packages/create-pocketpages/package.json
@@ -7,7 +7,8 @@
     "create-pocketpages": "index.js"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "starters.json"
   ],
   "keywords": [
     "pocketpages",
