chore(root): add create-pocketpages and datastar publishing

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "publish:marked": "cd packages/plugins/marked && bun publish",
     "publish:micro-dash": "cd packages/plugins/micro-dash && bun publish",
     "publish:realtime": "cd packages/plugins/realtime && bun publish",
+    "publish:create-pocketpages": "cd packages/create-pocketpages && bun publish",
+    "publish:datastar": "cd packages/plugins/datastar && bun publish",
     "fix": "prettier --write ."
   },
   "prettier": {
