enh(realtime): add getClientById

--- a/packages/starters/datastar/package.json
+++ b/packages/starters/datastar/package.json
@@ -24,5 +24,8 @@
     "starter",
     "datastar"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "pockethost": {
+    "instanceName": "datastar-chat"
+  }
 }
