--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -29,7 +29,8 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "pocketpages": "workspace:>=0.20.0",
+    "pocketpages": "workspace:>=0.22.2",
+    "pocketpages-plugin-datastar": "workspace:^0.2.0",
     "pocketpages-plugin-marked": "workspace:>=0.1.0"
   },
   "files": [
